--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <nav>
-    <div class="container">
+    <div class="nav">
       <h1>pokeSEARCH</h1>
     </div>
   </nav>
   <main>
     <div class="container">
       <form id="form">
-        <label for="search"><h2>Buscador de pokemones</h2></label>
+        <label for="search"><h3>Buscador de pokemones</h3></label>
         <div class="searchContainer">
           <input type="search" id="search"  placeholder="Busca tu pokemón..." autocomplete="off" required>
           <input type="submit" id="btnSubmit" value="Buscar">
